Updated to rdmp 3.0.12-rc

--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -28,6 +28,6 @@
     <PackageReference Include="fo-dicom" Version="4.0.1" />
     <PackageReference Include="HIC.DicomTypeTranslation" Version="1.0.0.3" />
     <PackageReference Include="HIC.FAnsiSql" Version="0.9.1.8" />
-    <PackageReference Include="HIC.RDMP.Plugin" Version="3.0.10" />
+    <PackageReference Include="HIC.RDMP.Plugin" Version="3.0.12-rc" />
   </ItemGroup>
 </Project>
