--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -27,6 +27,6 @@
   <ItemGroup>
     <PackageReference Include="fo-dicom" Version="4.0.1" />
     <PackageReference Include="HIC.DicomTypeTranslation" Version="1.0.0.3" />
-    <PackageReference Include="HIC.RDMP.Plugin" Version="3.0.12-rc" />
+    <PackageReference Include="HIC.RDMP.Plugin" Version="3.0.15" />
   </ItemGroup>
 </Project>
