RDMPDEV-1460 Updated to RDMP 3.0.15 API and removed references to UsefulStuff.BulkInsert...

--- a/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
+++ b/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HIC.FAnsiSql" Version="0.9.1.10" />
-    <PackageReference Include="HIC.RDMP.Plugin.Test" Version="3.0.12-rc" />
+    <PackageReference Include="HIC.RDMP.Plugin.Test" Version="3.0.15" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
