--- a/Plugin/netcoreapp2.2/netcoreapp2.2.csproj
+++ b/Plugin/netcoreapp2.2/netcoreapp2.2.csproj
@@ -5,7 +5,11 @@
     <AssemblyTitle>Rdmp.Dicom.Plugin</AssemblyTitle>
     <Product>Rdmp.Dicom.Plugin</Product>
     <Copyright>Copyright ©  2019</Copyright>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="..\..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Management" Version="4.*" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.*" />
@@ -22,11 +26,11 @@
     <PackageReference Include="MongoDB.Driver.Core" Version="2.8.0" />
     <PackageReference Include="MySql.Data" Version="8.0.15" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="NLog" Version="4.6.3" />
+    <PackageReference Include="NLog" Version="4.6.5" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.18.6" />
     <PackageReference Include="System.Buffers" Version="4.4.0" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
     <PackageReference Include="YamlDotNet" Version="6.0.0" />
   </ItemGroup>
