MSS-77 Added support for storing TagElevationXml in the database (instead of file).

--- a/Rdmp.Dicom.UI/Rdmp.Dicom.UI.csproj
+++ b/Rdmp.Dicom.UI/Rdmp.Dicom.UI.csproj
@@ -28,6 +28,9 @@
     <Compile Update="TagColumnAdderUI.Designer.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="TagElevationXmlUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
