--- a/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
+++ b/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
@@ -12,7 +12,7 @@
     <ProjectReference Include="..\Rdmp.Dicom\Rdmp.Dicom.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="HIC.RDMP.Plugin.Test" Version="3.1.0" />
+    <PackageReference Include="HIC.RDMP.Plugin.Test" Version="3.2.0-rc1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
