--- a/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -27,6 +27,6 @@
   <ItemGroup>
     <PackageReference Include="fo-dicom" Version="4.0.1" />
     <PackageReference Include="HIC.DicomTypeTranslation" Version="2.1.1" />
-    <PackageReference Include="HIC.RDMP.Plugin" Version="3.2.0-rc1" />
+    <PackageReference Include="HIC.RDMP.Plugin" Version="3.2.1" />
   </ItemGroup>
 </Project>
