--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ before_script:
 
 script:
 - wget https://github.com/HicServices/RDMP/releases/download/v3.2.1/rdmp-cli-linux-x64.zip
-- unzip rdmp-cli-linux-x64.zip
-- ls
-- sudo rdmp install localhost TEST_ -D -u sa -p YourStrong!Passw0rd
+- unzip -d rdmp-cli rdmp-cli-linux-x64.zip || true # Ignore exit code since unzip returns 1 for a warning we don't care about
+- cd rdmp-cli
+- chmod +x rdmp
+- ./rdmp install localhost TEST_ -D -u sa -p YourStrong\!Passw0rd
 # - dotnet test "Reusable/Tests/ReusableCodeTests/ReusableCodeTests.csproj"
 # - dotnet test "./Rdmp.Core.Tests/Rdmp.Core.Tests.csproj"
 # - dotnet build
