--- a/Plugin/netcoreapp2.2/netcoreapp2.2.csproj
+++ b/Plugin/netcoreapp2.2/netcoreapp2.2.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DnsClient" Version="1.2.0" />
-    <PackageReference Include="fo-dicom" Version="4.0.1" />
+    <PackageReference Include="fo-dicom" Version="[4.0.4]" />
     <PackageReference Include="Google.Protobuf" Version="3.5.1" />
     <PackageReference Include="HIC.DicomTypeTranslation" Version="2.1.2" />
     <PackageReference Include="MongoDB.Bson" Version="2.8.1" />
