--- a/Plugin/netcoreapp2.2/netcoreapp2.2.csproj
+++ b/Plugin/netcoreapp2.2/netcoreapp2.2.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="Google.Protobuf" Version="3.5.1" />
-    <PackageReference Include="HIC.DicomTypeTranslation" Version="[2.2.0]" />
+    <PackageReference Include="HIC.DicomTypeTranslation" Version="2.2.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.8.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.8.1" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.8.1" />
