--- a/Rdmp.Dicom.UI/Rdmp.Dicom.UI.csproj
+++ b/Rdmp.Dicom.UI/Rdmp.Dicom.UI.csproj
@@ -22,6 +22,12 @@
     <Compile Update="CreateNewImagingDatasetUI.Designer.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="IsolationTableUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="IsolationTableUI.Designer.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="TagColumnAdderUI.cs">
       <SubType>Form</SubType>
     </Compile>
