--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 - sudo apt-get install -y --no-install-recommends mssql-tools mssql-server dotnet-runtime-2.2 dotnet-sdk-3.1
 - sudo /opt/mssql/bin/mssql-conf -n setup accept-eula
 - |
-  if [ ! -x $HOME/rdmp-cli/rdmp || ! fgrep -q 4.1.0 $HOME/rdmp-cli/rdmp.dll ]
+  if [ ! -x $HOME/rdmp-cli/rdmp ] || ! fgrep -q 4.1.0 $HOME/rdmp-cli/rdmp.dll
   then
     rm -rf $HOME/rdmp-cli
     wget https://github.com/HicServices/RDMP/releases/download/v4.1.0/rdmp-cli-linux-x64.zip
