--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ cache:
   - $HOME/rdmp-cli
 
 install:
-- sudo apt-get install -y --no-install-recommends mssql-tools mssql-server dotnet-runtime-2.2 dotnet-sdk-3.1
+- sudo apt-get install -y --no-install-recommends mssql-tools mssql-server dotnet-runtime-2.2 dotnet-sdk-3.1 libgdiplus libc6-dev
 - sudo /opt/mssql/bin/mssql-conf -n setup accept-eula
 - |
   if [ ! -x $HOME/rdmp-cli/rdmp ] || ! fgrep -q 4.1.0 $HOME/rdmp-cli/rdmp.dll
