--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+merge_mode: replace
 jobs:
   include:
     - os: windows
@@ -18,8 +19,6 @@ jobs:
             - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/ubuntu/18.04/prod bionic main'
               key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
             - sourceline: 'deb [arch=amd64,arm64,armhf] https://packages.microsoft.com/ubuntu/16.04/mssql-server-2017 xenial main'
-            - sourceline: 'deb [arch=i386] http://oss.oracle.com/debian unstable main non-free'
-
 
 addons:
 
