--- a/.travis.yml
+++ b/.travis.yml
@@ -60,6 +60,7 @@ install:
     echo "ServerName: localhost" > Rdmp.Dicom.Tests/TestDatabases.txt
     echo "Prefix: TEST_" >> Rdmp.Dicom.Tests/TestDatabases.txt
     choco install sql-server-2017
+    choco install dotnetcore-sdk
     choco install nuget.commandline
     $HOME/rdmp-cli/rdmp.exe install localhost TEST_
   fi
