--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,10 @@ install:
   then
     sudo apt-get install -y --no-install-recommends mssql-tools mssql-server libc6-dev libgdiplus dotnet-runtime-2.2 dotnet-sdk-3.1
     sudo /opt/mssql/bin/mssql-conf -n setup accept-eula
-    if [ ! -x $HOME/rdmp-cli/rdmp ] || ! fgrep -q 4.1.0 $HOME/rdmp-cli/rdmp.dll
+    if [ ! -x $HOME/rdmp-cli/rdmp ] || ! fgrep -q 4.1.8 $HOME/rdmp-cli/rdmp.dll
     then
       rm -rf $HOME/rdmp-cli
-      wget https://github.com/HicServices/RDMP/releases/download/v4.1.0/rdmp-cli-linux-x64.zip
+      wget https://github.com/HicServices/RDMP/releases/download/v4.1.8/rdmp-cli-linux-x64.zip
       # RDMP is still being packaged using a ZIP tool with a bug Microsoft fixed in .Net 4.6.1; excluding Chinese language support file and keyword help avoids unzip being affected by the bug: https://docs.microsoft.com/en-us/dotnet/framework/migration-guide/mitigation-ziparchiveentry-fullname-path-separator?redirectedfrom=MSDN
       unzip -d $HOME/rdmp-cli rdmp-cli-linux-x64.zip -x "Curation*" "zh-*"
       chmod +x $HOME/rdmp-cli/rdmp
@@ -51,10 +51,10 @@ install:
 - |
   if [ "$TRAVIS_OS_NAME" = "windows" ]
   then
-    if [ ! -x $HOME/rdmp-cli/rdmp.exe ] || ! fgrep -q 4.1.0 $HOME/rdmp-cli/rdmp.dll
+    if [ ! -x $HOME/rdmp-cli/rdmp.exe ] || ! fgrep -q 4.1.8 $HOME/rdmp-cli/rdmp.dll
     then
       rm -rf $HOME/rdmp-cli
-      wget https://github.com/HicServices/RDMP/releases/download/v4.1.0/rdmp-cli-win-x64.zip
+      wget https://github.com/HicServices/RDMP/releases/download/v4.1.8/rdmp-cli-win-x64.zip
       7z x rdmp-cli-win-x64.zip -o$HOME/rdmp-cli
     fi
     echo "ServerName: localhost" > Rdmp.Dicom.Tests/TestDatabases.txt
@@ -75,8 +75,8 @@ script:
     cd Plugin/net461
     dotnet publish --runtime win-x64 -c Release --self-contained false
     cd ../netcoreapp2.2
-    dotnet publish --runtime win-x64 -c Release --self-contained false -o bin/Release/netcoreapp2.2/win-x64/publish
-    dotnet publish --runtime linux-x64 -c Release --self-contained false -o bin/Release/netcoreapp2.2/linux-x64/publish
+    dotnet publish --runtime win-x64 -c Release --self-contained false
+    dotnet publish --runtime linux-x64 -c Release --self-contained false
     cd ../..
     nuget pack ./Rdmp.Dicom.nuspec -Properties Configuration=Release -IncludeReferencedProjects -Symbols -Version ${RDVERSION}
     nuget pack ./Rdmp.Dicom.Library.nuspec -Properties Configuration=Release -IncludeReferencedProjects -Symbols -Version ${RDVERSION}
