Run version under cmd

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,6 +18,7 @@ jobs:
           dotnet-version: 3.1.301
       - name: Get version
         id: version
+        shell: cmd
         run: |
           for /f tokens^=1^,2^ delims^=^" %i in (SharedAssemblyInfo.cs) do @if "%i"=="[assembly: AssemblyVersion(" echo ::set-output name=version::%j
       - name: Report version
