--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,6 +21,13 @@ jobs:
         shell: cmd
         run: |
           for /f tokens^=1^,2^ delims^=^" %%i in (SharedAssemblyInfo.cs) do @if "%%i"=="[assembly: AssemblyVersion(" echo ::set-output name=version::%%j
+          for /f tokens^=2^,4^ delims^=^" %%i in (Rdmp.Dicom/Rdmp.Dicom.csproj) do @if "%%i"=="HIC.RDMP.Plugin" echo ::set-output name=rdmpversion::%%j
+        name: Set up database
+        run: |
+          choco install sql-server-2019
+          Invoke-WebRequest -Uri https://github.com/HicServices/RDMP/releases/download/v${{ steps.version.outputs.rdmpversion }}/rdmp-cli-linux-x64.zip -OutFile rdmp.zip
+          Expand-Archive -Path rdmp.zip -DestinationPath rdmp-cli
+          rdmp-cli/rdmp.exe install localhost TEST_
       - name: Test
         run: dotnet test
       - name: Build
