Try with cmd.exe /c

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -27,7 +27,7 @@ jobs:
           choco install sql-server-2019
           Invoke-WebRequest -Uri https://github.com/HicServices/RDMP/releases/download/v${{ steps.version.outputs.rdmpversion }}/rdmp-cli-linux-x64.zip -OutFile rdmp.zip
           Expand-Archive -Path rdmp.zip -DestinationPath rdmp-cli
-          & "rdmp-cli\\rdmp.exe" install localhost TEST_
+          cmd.exe /c "rdmp-cli\\rdmp.exe" install localhost TEST_
       - name: Test
         run: dotnet test
       - name: Build
