--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           choco install sql-server-2019
           Invoke-WebRequest -Uri https://github.com/HicServices/RDMP/releases/download/v${{ steps.version.outputs.rdmpversion }}/rdmp-cli-linux-x64.zip -OutFile rdmp.zip
-          Expand-Archive -Path rdmp.zip -DestinationPath rdmp-cli
-          cmd.exe /c "rdmp-cli\\rdmp.exe" install localhost TEST_
+          Expand-Archive -Path rdmp.zip -DestinationPath .\rdmp-cli
+          cmd.exe /c "rdmp-cli\rdmp.exe install localhost TEST_"
       - name: Test
         run: dotnet test
       - name: Build
