More path tweaking

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -27,8 +27,8 @@ jobs:
           echo choco install sql-server-2019
           Invoke-WebRequest -Uri https://github.com/HicServices/RDMP/releases/download/v${{ steps.version.outputs.rdmpversion }}/rdmp-cli-linux-x64.zip -OutFile rdmp.zip
           Expand-Archive -Path rdmp.zip -DestinationPath .\rdmp-cli
-          cmd.exe "dir"
-          cmd.exe "rdmp-cli"
+          cmd.exe /c dir
+          cmd.exe /c dir rdmp-cli
           cmd.exe /c "rdmp-cli\rdmp.exe install localhost TEST_"
       - name: Test
         run: dotnet test
