--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -26,9 +26,9 @@ jobs:
         run: |
           echo choco install sql-server-2019
           Invoke-WebRequest -Uri https://github.com/HicServices/RDMP/releases/download/v${{ steps.version.outputs.rdmpversion }}/rdmp-cli-linux-x64.zip -OutFile rdmp.zip
-          Expand-Archive -Path rdmp.zip -DestinationPath .\rdmp-cli
-          cmd.exe /c echo rdmp-cli\rdmp.exe install localhost TEST_
-          cmd.exe /c rdmp-cli\rdmp.exe install localhost TEST_
+          Expand-Archive -Path rdmp.zip -DestinationPath .\rdmpcli
+          cmd.exe /c echo rdmpcli\rdmp.exe install localhost TEST_
+          cmd.exe /c rdmpcli\rdmp.exe install localhost TEST_
       - name: Test
         run: dotnet test
       - name: Build
